--- a/lazy-loading/js/demo.html
+++ b/lazy-loading/js/demo.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Teste 1</title>
+    <title>Teste 2</title>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <script>
       window.googletag = window.googletag || {cmd: []};
@@ -13,7 +13,7 @@
         googletag.defineSlot('/6355419/Travel2', [728, 90], 'div-2')
           .setTargeting('test', 'lazyload')
           .addService(googletag.pubads());
-        googletag.defineSlot('/6355419/Travel', [728, 90], 'div-3')
+        googletag.defineSlot('/6355419/Travel3', [728, 90], 'div-3')
           .setTargeting('test', 'lazyload')
           .addService(googletag.pubads());
         googletag.pubads().enableLazyLoad({
