--- a/lazy-loading/js/demo.html
+++ b/lazy-loading/js/demo.html
@@ -10,10 +10,10 @@
         googletag.defineSlot('/6355419/Travel', [728, 90], 'div-1')
           .setTargeting('test', 'lazyload')
           .addService(googletag.pubads());
-        googletag.defineSlot('/6355419/Travel2', [728, 90], 'div-2')
+        googletag.defineSlot('/6355419/Travel', [728, 90], 'div-2')
           .setTargeting('test', 'lazyload')
           .addService(googletag.pubads());
-        googletag.defineSlot('/6355419/Travel3', [728, 90], 'div-3')
+        googletag.defineSlot('/6355419/Travel', [728, 90], 'div-3')
           .setTargeting('test', 'lazyload')
           .addService(googletag.pubads());
         googletag.pubads().enableLazyLoad({
