--- a/lazy-loading/js/demo.html
+++ b/lazy-loading/js/demo.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Teste 3</title>
+    <title>Teste 4</title>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <script>
       window.googletag = window.googletag || {cmd: []};
@@ -36,7 +36,7 @@
         elem.innerText = 'Yes';
       }
     </script>
-    <!-- <script>
+    <script>
       //load the apstag.js library
       !function(a9,a,p,s,t,A,g){if(a[a9])return;function q(c,r){a[a9]._Q.push([c,r])}a[a9]={init:function(){q("i",arguments)},fetchBids:function(){q("f",arguments)},setDisplayBids:function(){},targetingKeys:function(){return[]},_Q:[]};A=p.createElement(s);A.async=!0;A.src=t;g=p.getElementsByTagName(s)[0];g.parentNode.insertBefore(A,g)}("apstag",window,document,"script","//c.amazon-adsystem.com/aax2/apstag.js");
       
@@ -53,7 +53,7 @@
            },
            {
                slotID: 'div-2', //example: 'div-gpt-ad-1475185990716-0'
-               slotName: '/6355419/Travel2', //example: '12345/leaderboard-1'
+               slotName: '/6355419/Travel', //example: '12345/leaderboard-1'
                sizes: [[728, 90]] //example: [[728,90]]
            }],
            timeout: 2e3
@@ -64,7 +64,7 @@
                googletag.pubads().refresh();
            });
       }); 
-      </script> -->
+      </script>
     <style>
       div.ad-slot {
         border-style: dashed;
